--- a/content/posts/anotherPost.mdx
+++ b/content/posts/anotherPost.mdx
@@ -3,62 +3,21 @@ title: Just Another Blog Post
 excerpt: >
   Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit
   maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad
-  vasti, distulit. Crudus sub coniuge iam: dea propera sive
+  vasti, distulit. Crudus sub coniuge iam: dea propera sivevfddfvfdvfdv
 author: content/authors/napolean.md
 date: '2021-07-12T07:00:00.000Z'
 ---
 
-# Vote For Pedro
+Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
 
-Hello, the current date and time is <DateTime format="iso"/>. Quis semper [vulputate](https://example.com) aliquam venenatdis egestas sagittis quisque orci. Donec commodo sdit viverra aliquam porttitor ultrices gravida eu. Tincidunt leo, elementum mattis elementum ut nisl, justo, amet, mattis. Nunc purus, diam cdommodo tincidunt turpis. Amet, duis sed elit interdum dignissim
+Curabitur aliquet quam id dui posuere blandit. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus suscipit tortor eget felis porttitor volutpat.
 
-![](http://res.cloudinary.com/deuzrsg3m/image/upload/v1634858384/tina-upload\_yxevty.jpg "")
+Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat.
 
-***
+Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Proin eget tortor risus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
 
-```
-const test = "example code"
-```
+Sed porttitor lectus nibh. Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
-> Id orci tellus laoreet id ac. Dolor, aenean leo, ac etiam consequat in. Convallis arcu ipsum urna nibh. Pha
->
-> retra, euismod vitae interdum mauris enim, consequat vulputate nibh. Maecenas pellentesque id sed tellus mauris, ultrices mauris. Tincidunt enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam turpis ipsum eu a sed convallis diam.
-
-![This is an image](http://res.cloudinary.com/deuzrsg3m/image/upload/v1631389967/apfx/kevin-bosc-oeqBJZd1GWY-unsplash\_rtuyot.jpg "Building, by Thomas Carlisle")
-
-Quis semper [vulputate](https://example.com) aliquam venenatdis egestas sagittis quisque orci. Donec commodo sit viverra aliquam porttitor ultrices gravida eu. Tincidunt leo, elementum mattis elementum ut nisl, justo, amet, mattis. Nunc purus, diam cdommodo tincidunt turpis. Amet, duis sed elit interdum dignissim
-
-<NewsletterSignup
-  placeholder="Enter your email"
-  buttonText="Notify Me"
-  disclaimer={
-<>
-We care about the protection of your data. Read our [Privacy Policy](http://example.com).
-
-</>
-}
->
-  ## Stay in touch!
-
-  Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui Lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat.
-</NewsletterSignup>
-
-### 3 Reasons to vote for Pedro
-
-*   Anim aute id magna aliqua ad ad non deserunt sunt
-*   Qui irure qui Lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat.
-*   Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad vasti, distulit. Crudus sub coniuge iam: dea propera sive?
-
-### 3 More Reasons to vote for Pedro
-
-1.  Anim aute id magna aliqua ad ad non deserunt sunt
-2.  Qui irure qui Lorem cupidatat commodo.
-    . Elit sunt amet fugiat veniam occaecat fugiat.
-3.  Lorem markdownum evinctus ut cape adhaeret gravis licet progenies ut haesit maxima ille. Est scorpius, mori vel in visaeque Haemoniis viperei furoris e ad vasti, distulit. Crudus sub coniuge iam: dea propera sive?
-
-***
-
-<BlockQuote authorName="Uncle Rico">
-  How much you wanna make a bet I can throw a football over [them
-  mountains](https://images.unsplash.com/photo-1454496522488-7a8e488e8606?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8\&ixlib=rb-1.2.1\&auto=format\&fit=crop\&w=2110\&q=80)?
+<BlockQuote authorName="tester">
+  this is a block quote
 </BlockQuote>
